[package]
name = "news_slide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vzglyd_text_slide = { package = "vzglyd-text-slide", path = "../../vzglyd-text-slide" }
news_sidecar = { path = "sidecar" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heapless = "0.8"
